# WebScraperToolkit

./: .gitattributes  .gitignore  INSTRUCTIONS.md  README.md  config.example.json  config.json  host_profiles.example.json  lint_report.txt  pyproject.toml  quality_gate.json  run_server.py  run_tests.py  settings.example.cfg  verify_remote_mcp.py
.github/workflows/: ci.yml  publish.yml
docs/: api_stability.md  config_schema.md  release_checklist.md  support_matrix.md
scripts/: bot_check.py  challenge_diagnostic_matrix.py  clean_workspace.py  debug_px.txt  diag_bot_check.py  diag_browser_info.py  diag_challenge_matrix.py  diag_cloudflare_matrix.py  diag_duckduckgo_matrix.py  diag_google_matrix.py  diag_headers.py  diag_observe_px.py  diag_simple_stealth.py  diag_stealth_bypass.py  diag_stealth_debug.py  diag_toolkit_route.py  diag_toolkit_zoominfo.py  diag_wd.py  diag_zoominfo_bypass.py  diag_zoominfo_legacy.py  get_browser_info.py  git_diff.txt  google_stealth_check.py  healthcheck_mcp.py  px_debug.py  remove_mcp_service_ubuntu.sh  render_mermaid_diagrams.py  setup_mcp_service_ubuntu.sh  start_server.bat  start_server.ps1  start_server.sh  status_server.bat  status_server.ps1  status_server.sh  stop_server.bat  stop_server.ps1  stop_server.sh  verify_mcp_gap_fill.py  verify_real_world.py  zoominfo_diagnostic_matrix.py
tests/: __init__.py  conftest.py  debug_cf.html  debug_cf.json  debug_cf_real.json  test_async_jobs.py  test_basics.py  test_challenge_evidence.py  test_challenge_fixture_replay.py  test_cli.py  test_cloudflare_bypass.py  test_contacts.py  test_discovery.py  test_feature_coverage.py  test_fetch_outcome_arbitration.py  test_fetch_result_api.py  test_google_query_repro.py  test_host_profiles.py  test_host_profiles_cli.py  test_html_to_markdown.py  test_httpx_google.py  test_interactive_session.py  test_mcp_server.py  test_multimodal.py  test_performance_budget.py  test_playwright_manager.py  test_px_solver.py  test_remote_mcp_integration.py  test_runtime_config.py  test_scraping_tools.py  test_script_diagnostics.py  test_serp_background_tasks.py  test_serp_native.py  test_serp_parser.py  verify_batch_return.py  verify_crawler.py  verify_hybrid.py  verify_hybrid_simple.py  verify_imports.py  verify_proxie.py  (+3 more)
(+107 files in other folders)
