[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "web-scraper-toolkit"
version = "0.3.3"
description = "A powerful, standalone web scraping toolkit using Playwright and various parsers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright",
    "beautifulsoup4",
    "requests",
    "lxml",
    "pypdf",
    "rich",
    "playwright-stealth>=2.0.0",
    "fastmcp",
    "emailtoolkit",
    "phonenumbers",
    "aiohttp",
    "aiohttp-socks",
    "tldextract>=5.1.2",
    "pyautogui>=0.9.54"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

authors = [
    {name = "Roy Dawson IV"}
]
license = "MIT"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.urls]
"Homepage" = "https://github.com/imyourboyroy/WebScraperToolkit"
"Repository" = "https://github.com/imyourboyroy/WebScraperToolkit"

[project.scripts]
web-scraper = "web_scraper_toolkit.cli:main"
web-scraper-server = "web_scraper_toolkit.server.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
exclude = ["FOR_REFERENCE_ONLY", "scripts", ".quality_gate_venvs", ".venv", "venv"]
line-length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "asyncio: mark tests requiring asyncio event loop support",
    "integration: mark live network/browser integration tests that are skipped by default",
    "benchmark: mark performance budget tests",
]

[tool.mypy]
python_version = "3.10"
follow_imports = "skip"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
files = [
    "src/web_scraper_toolkit/core/logger.py",
    "src/web_scraper_toolkit/core/script_diagnostics.py",
    "src/web_scraper_toolkit/core/_script_diagnostics",
    "src/web_scraper_toolkit/browser/domain_identity.py",
]
